# ta_material

./: README.md
embedded_systems/RS232_serial_comm_RTOS_example_spring_2018/: common.c  common.h  tsk_task0.c  tsk_task1.c
embedded_systems/RTOS_serial_comm_assignments/: README.md
embedded_systems/adc_interrupts_timers_spring_2019/: README.md
embedded_systems/round_robin_design_picSIMlab_spring_2020/: board_settings.pzw  peripherals.pcf
embedded_systems/round_robin_design_picSIMlab_spring_2020/tests/: build_and_run_all_tests.bat  build_and_run_all_tests.sh  rb0_pulse.scl  (+33 more)
object_oriented_langs_and_systems/hardly_working_students_thread_synchronization_spring_2019/: MainTester.java
robotics/ROS_basics_treasure_hunt_with_transforms_fall_2020/: package.xml  ride.yml
robotics/RRT_path_finding_matlab_spring_2021/: arc_test.m  draw_arc.m  local_planner.m  plot_robot.m  three_wheel_RRT_draw.m  three_wheel_RRT_example.m  three_wheel_RRT_find_goal_path.m  three_wheel_RRT_one_step.m  tree_add_child.m  tree_example.m  tree_init.m  tree_print_bfs.m  tree_print_dfs.m
robotics/arm_kinematics_matlab_spring_2021/: animate_line_ik_2link_arm.m  ik_2link_arm.m  ik_example.m  line_ik_2link_arm.m
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/: CMakeLists.txt  package.xml  ride.yml  riders_setup.sh
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/launch/: ceng460_hw2.launch  spawn_gazebo_ur5.launch
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/models/: transparent_box.sdf
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/scripts/: ceng460_hw2_environment.py  ceng460_hw2_utils.py  rrt_2d.py  rrt_base.py  spawn_obstacles.py
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/src/: ceng460_hw2_world_plugin.cpp
robotics/conf_agnostic_RRTStar_with_ROS_fall_2020/worlds/: ceng460_hw2.world
robotics/jacobians_mobile_robots_matlab_spring_2021/: animate_path_2link_arm.m  circle_with_jacobians.m  jacobians_example.m  line_segment_with_jacobians.m
robotics/mobile_robots_PID_control_numpy_fall_2019/: hw_template.py  hwtest.py
robotics/spatial_transforms_matlab_spring_2021/: example.m  init_tf460.m  insert_tf460.m  query_tf460.m
robotics/spatial_transforms_numpy_fall_2019/: hw_plotting.py  hw_template.py
(+12 files in other folders)
