<?xml version="1.0"?>
<package format="2">
  <name>ceng460_hw2</name>
  <version>0.0.0</version>
  <description>The ceng460_hw2 package</description>
  <license>MIT</license>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>control_msgs</depend>
  <depend>tf2_msgs</depend>
  <depend>gazebo_ros</depend>
  <depend>ur_gazebo</depend>
  <depend>ur_description</depend>
  <depend>ur5_moveit_config</depend>
  <depend>gazebo</depend>
  <depend>gazebo_dev</depend>
  <depend>gazebo_msgs</depend>
  <depend>std_msgs</depend>
  <depend>urdf</depend>
  <depend>xacro</depend>
  <depend>actionlib_msgs</depend>
  <depend>std_srvs</depend>
  
  <build_depend>message_generation</build_depend> -->
  <exec_depend>message_runtime</exec_depend> -->

  <buildtool_depend>catkin</buildtool_depend>

  <export>
    <gazebo_ros plugin_path="${prefix}/../../lib" gazebo_media_path="${prefix}" gazebo_model_path="${prefix}/models" />
  </export>
</package>
